--- a/museum-frontend/package.json
+++ b/museum-frontend/package.json
@@ -23,6 +23,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "fortawesome": "^0.0.1-security",
     "rxjs": "~7.8.0",
