--- a/museum-frontend/package.json
+++ b/museum-frontend/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "fortawesome": "^0.0.1-security",
+    "moment": "^2.30.1",
     "mydatepicker": "^2.6.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
